# DualRieselProject

./: .gitignore  CMakeLists.txt  DualConjectures.java  Makefile  Primes found _81K.txt  R2 > 81K.txt  R2_1-39_primes.txt  R2_40-661_primes.txt  R2_662-81000_PRPs.txt  README.md  SR_constants.js  common.cpp  common.hpp  faq.md  helloWorld.md  history.md  index.html  index.md  initialTesting.cpp  initialization.cpp  initialization.hpp  main.cpp  make.bat  old.js  progress.md  todo.md  util.cpp  util.hpp  windows_make_command.txt
_includes/: head-custom.html  head.html
assets/css/: style.scss
docs/: calculating_trivial_factors.md  dsrs-ini.txt  programStructure.txt
include/: common.hpp  initialTesting.hpp  initialization.hpp  util.hpp
old/: DualRieselClient.ini  DualRieselClient.json  R2.in  R2.ini  R2_2.in  R2_abs.src  R2_abs.src (backup)  R2test - Copy.ini  R2test.ini  README.md  SR_constants.js  cmd.exe.lnk  converter.py  k1b2.pfgw  package-lock.json  pfgw.ini
old/Programs/: example_sr2data.txt  k1b2.pfgw
old/temp/: sr2dat0.txt  sr2dat1.txt  sr2dat2.txt  sr2dat3.txt
